# dicom-editor

./: .gitignore  AGENTS.md  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: package_artifact.py
src/dicom_editor/: app.py  dicom_io.py  edit_ops.py  module_requirements.py  tag_model.py  tag_registry.py  ui.py
src/dicom_editor/data/: innolitics_allowlist.json  module_requirements.json
tests/: test_dicom_io.py  test_edit_ops.py  test_module_requirements.py  test_tag_registry.py  test_ui_add_path_logic.py  test_ui_value_options.py
