[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dicom-tag-editor"
version = "0.0.1"
description = "DICOM tag editor GUI with standard-tag allowlist"
requires-python = ">=3.10"
dependencies = [
  "PySide6>=6.7",
  "pydicom>=2.4"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
dicom-tag-editor = "dicom_editor.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dicom_editor = ["data/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
